bug: fixed navbar overlapping container

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -3,12 +3,16 @@
   grid-template-columns: 1fr 1fr 1fr;
 }
 
+/* body {
+  padding-top: 60px;
+} */
+
 * {
   box-sizing: border-box;
 }
 
 .page-container {
-  margin-top: 60px;
+  margin-top: 80px;
 }
 
 .liItem {
@@ -21,6 +25,12 @@
 
 .hidden {
   display: none;
+}
+
+@media (max-width: 991px) {
+  body {
+    padding-top: 80px;
+  }
 }
 
 @media all and (max-width: 800px) {
